--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,10 @@ networks:
 services:
 
   backend:
-    build:
+    build: 
       context: ./backend
-      dockerfile: ./Dockerfile
+      dockerfile: Dockerfile.dev
+    working_dir: /app
     environment:
       - DB_HOST=mysql
       - DB_USER=root
@@ -19,44 +20,47 @@ services:
       - BACKEND_URL=${BACKEND_URL:-http://localhost}
       - FRONTEND_URL=${FRONTEND_URL:-http://localhost:3000}
       - PROXY_PORT=${PROXY_PORT:-8080}
+      - PORT=${PORT:-3000}
       - CHROME_ARGS=--no-sandbox --disable-setuid-sandbox
+      - NODE_ENV=development
     ports:
       - ${BACKEND_PORT:-8080}:3000
     volumes:
-      - ./backend/public/:/usr/src/app/public/
-      - ./backend/.wwebjs_auth/:/usr/src/app/.wwebjs_auth/
+      - ./backend:/app
     networks:
       - whaticket
+    command: run dev:server
 
   frontend:
-    ports:
-      - ${FRONTEND_PORT:-3000}:80
-      - ${FRONTEND_SSL_PORT:-3001}:443
-    build:
-      context: ./frontend
-      dockerfile: ./Dockerfile
+    image: node:14
+    working_dir: /app
     environment:
       - URL_BACKEND=backend:3000
       - REACT_APP_BACKEND_URL=${BACKEND_URL:-http://localhost}:${PROXY_PORT:-8080}/
       - FRONTEND_SERVER_NAME=${FRONTEND_SERVER_NAME}
       - BACKEND_SERVER_NAME=${BACKEND_SERVER_NAME}
+    ports:
+      - ${FRONTEND_PORT:-3000}:80
+      - ${FRONTEND_SSL_PORT:-3001}:443
     volumes:
-      - ./ssl/certs/:/etc/nginx/ssl/
-      - ./ssl/www/:/var/www/letsencrypt/
+      - ./frontend:/app
     networks:
       - whaticket
+    # entrypoint: npm start
 
   mysql:
     image: ${MYSQL_ENGINE:-mariadb}:${MYSQL_VERSION:-10.6}
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_bin    
     volumes:
-      - ./.docker/data/:/var/lib/mysql
+      - db_data:/var/lib/mysql
     environment:
       - MYSQL_DATABASE=${MYSQL_DATABASE:-whaticket}
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-strongpassword}
-      - TZ=${TZ:-America/Fortaleza}
+      - TZ=${TZ:-America/Sao_Paulo}
     ports:
       - ${MYSQL_PORT:-3306}:3306
     restart: always
     networks:
       - whaticket
+volumes:
+  db_data:
