--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,9 @@
     "react-toastify": "^6.0.9",
     "recharts": "^2.0.2",
     "socket.io-client": "^3.0.5",
+    "typescript": "^4.9.4",
     "use-sound": "^2.0.1",
+    "webrtc-adapter": "^4.1.1",
     "yup": "^0.32.8"
   },
   "scripts": {
@@ -51,5 +53,8 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/core": "^7.13.0",
+    "babel": "^6.23.0"
+  }
 }
