--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,13 +27,12 @@
     "react-toastify": "^6.0.9",
     "recharts": "^2.0.2",
     "socket.io-client": "^3.0.5",
-    "typescript": "^4.9.4",
     "use-sound": "^2.0.1",
     "webrtc-adapter": "^4.1.1",
     "yup": "^0.32.8"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
