change phpmyadmin image to latest

--- a/docker-compose.phpmyadmin.yaml
+++ b/docker-compose.phpmyadmin.yaml
@@ -6,7 +6,7 @@ networks:
 services:
 
   phpmyadmin:
-    image: phpmyadmin/phpmyadmin:latest
+    image: phpmyadmin
     environment:
       - PMA_HOSTS=mysql
     ports:
